tests/NormalTests/paczka1/fuzzy1/27586303.err
Error in line 1: S508 S792 48,6
Error in line 5: S508 A762 18,8
Error in line 17: W0Im S508 5,4
Error in line 6: S508 A937 31,2
Error in line 12: 0vTLSKTYPh S508 37,0
Error in line 22: S508 S792 -1,3
